--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "poetry-plugin-ignore-build-script"
 version = "0.1.0"
-description = "Poetry plugin that adds support for building generic purelib wheels by ignoring build scripts."
+description = "Poetry plugin that adds support for building non platform wheels by ignoring build scripts."
 authors = ["Blair Azzopardi <blairuk@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "poetry_plugin_ignore_build_script"}]
+repository = "https://github.com/bsdz/poetry-plugin-ignore-build-script"
 
 [tool.poetry.dependencies]
 python = "^3.8"
